# NanoWin

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  NanoWin.c  NanoWin.h  README.md
cmake/: ANGLE.cmake  Skia.cmake
include/: NanoWin.h
lib/: NanoWin.c  NanoWin_Internal.h  NanoWin_Wasm.h  nanowin.h
lib/backends/web/: nanowin.c
lib/backends/win32/: nanowin.c
src/: app.rs  geometry.rs  lib.rs  version.rs  window.rs
src/macos/: mod.rs  nsappdelegate.rs  nsmtkview.rs
src/wasm/: mod.rs
src/windows/: mod.rs
