[package]
name = "nanowin"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["all"] }
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-metal = { version = "0.2.2", features = ["all"] }
objc2-metal-kit = { version = "0.2.2", features = ["all"] }
objc2-quartz-core = { version = "0.2.2", features = ["all"] }
skia-safe = { version = "0.80.1", features = ["metal"] }

